--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,7 +29,6 @@
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
-    
   }
 
   .dark {
@@ -66,14 +65,7 @@
   }
   body {
     @apply bg-background text-foreground;
+    font-family:  'Tajawal', sans-serif;
+    ;
   }
-}
-
-
-.link-children a{
-  
-  color: #2D2D2D;
-}
-.revert-layer{
-    height: revert-layer;
 }
